<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/titulo_app"
        android:textColor="#CC1269"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtDescricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descricao_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitulo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E0E0E0"
        android:layout_margin="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDescricao">

        <ImageView
            android:id="@+id/imgUsuario"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="16dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_user"
            android:scaleType="centerCrop"
            />

        <EditText
            android:id="@+id/edtNomeUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/edt_nome"

            />

        <EditText
            android:id="@+id/edtIdadeUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edt_idade"
            android:inputType="numberDecimal"
            android:layout_margin="8dp"
           />

        <Button
            android:id="@+id/btnCadastrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#D835DD"
            android:text="@string/btn_cadastrar"
            android:textColor="@color/colorNeutralLight"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:layout_margin="24dp"
            android:layout_gravity="center_horizontal"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>